<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/phtos_bar_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/albums_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffff"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll"
        layout_collapsemode="pin"
        android:theme="@style/NoShadowNormalTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/relative_toolbar">


                <TextView
                    android:id="@+id/Photos_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/bold"
                    android:textSize="22sp"
                    android:text="@string/Photos"
                    android:textColor="@color/black"
                    android:contentDescription="@string/image_content_description"
                    android:src="@drawable/plus"
                    android:layout_marginStart="12dp" />

                <TextView
                    android:id="@+id/select_photos_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/fts"
                    android:text="@string/Select"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="21sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/done_photos_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/fts"
                    android:text="@string/Done"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="21sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:visibility="gone" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albums_titlebar"
        android:layout_above="@id/delete_nav_bar"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_recycler_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/delete_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:background="#D3D3D3"
        app:menu="@menu/albums_menu"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:labelVisibilityMode="unlabeled">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>