<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/see_all_albums_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll"
        layout_collapsemode="pin"
        android:theme="@style/NoShadowNormalTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/back_imageView2"
                    android:layout_width="53dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"

                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="0dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:foregroundGravity="right"
                    android:padding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:src="@drawable/enabledbackarrow"

                    android:contentDescription="@string/todo"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp" />

                <ImageView
                    android:id="@+id/gray_back_imageView"
                    android:layout_width="53dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="0dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:foregroundGravity="right"
                    android:padding="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:visibility="gone"
                    android:contentDescription="@string/todo"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp" />

                <TextView
                    android:id="@+id/see_all_albums_word_textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bold"
                    android:text="@string/albums"
                    android:textColor="@android:color/black"
                    android:textSize="21sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_albums_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/Edit"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:fontFamily="@font/fts"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/done_albums_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/Done"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:fontFamily="@font/fts"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:visibility="gone"
                    android:layout_marginEnd="10dp" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/see_all_albums_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"


            />

    </GridLayout>
</LinearLayout>