<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/albums_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffff"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll"
        layout_collapsemode="pin"
        android:theme="@style/NoShadowNormalTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/relative_toolbar">


                <ImageView
                    android:id="@+id/plus_imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image_content_description"
                    android:src="@drawable/plus" />

                <TextView
                    android:id="@+id/albums_word_textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bold"
                    android:text="@string/albums"
                    android:textColor="@android:color/black"
                    android:textSize="26sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:fitsSystemWindows="true"

            android:orientation="vertical"
            tools:context=".presentation.foryou.ForyouFragment"
            android:id="@+id/albums_mother_constraint_layout">


            <RelativeLayout
                android:id="@+id/my_albums_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#ffff"
                app:layout_constraintTop_toTopOf="@id/albums_mother_constraint_layout"
                android:label="@string/my_albums"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintHorizontal_bias="1"
                android:theme="@style/NoShadowBarTheme">


                <TextView
                    android:id="@+id/My_albums_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="@string/albums"
                    android:fontFamily="@font/bold"
                    android:text="@string/my_albums"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:id="@+id/see_all_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="fts"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="22sp"
                    android:focusable="false"

                    android:focusableInTouchMode="false" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foryou_recycleView"
                android:layout_width="0dp"
                android:layout_height="550dp"
                android:layout_below="@id/my_albums_layout"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_albums_layout"></androidx.recyclerview.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/foryou_recycleView"
                android:id="@+id/horizontal_divider1" /> <!--tazzy this is the divider-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/peopleNplaces_scroll_layout"
                android:fitsSystemWindows="true"
                app:layout_constraintTop_toBottomOf="@id/horizontal_divider1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/peopleNplaces_label"
                        android:text="@string/peopleNplaces"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/albums"
                        android:fontFamily="@font/bold"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:layout_marginStart="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/people_places_linear_layout">

                        <androidx.cardview.widget.CardView
                            android:layout_width="220dp"
                            android:layout_height="220dp"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="0dp"
                            android:id="@+id/people_roundedCorners_cardView"
                            android:layout_marginStart="10dp">

                            <ImageView
                                android:id="@+id/people_imageView"
                                android:layout_width="220dp"
                                android:layout_height="220dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_launcher_background"
                                android:contentDescription="@string/todo" />  <!--tazzy remember to add id's in strings-->
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="220dp"
                            android:layout_height="220dp"
                            android:orientation="vertical"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="0dp"
                            android:layout_marginLeft="22dp"
                            android:id="@+id/places_roundedCorners_cardView"
                            android:layout_marginStart="22dp">

                            <ImageView
                                android:id="@+id/places_imageView"
                                android:layout_width="220dp"
                                android:layout_height="220dp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_launcher_background"
                                android:contentDescription="@string/todo" />  <!--tazzy remember to add id's in strings-->
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintTop_toBottomOf="@id/people_places_linear_layout"
                        android:id="@+id/horizontal_divider2" />

                    <!--LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/videosNhidden_layout"
                        android:orientation="vertical"
                        android:paddingBottom="50dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/hidden_label"
                            android:fontFamily="@font/bold"
                            android:textColor="@android:color/black"
                            android:layout_marginLeft="10dp"
                            android:textSize="30sp"
                            android:text="@string/hidden"
                            android:layout_marginStart="10dp" />

                        <TextView
                            android:id="@+id/videos_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bold"
                            android:textColor="@android:color/black"
                            android:layout_marginLeft="10dp"
                            android:textSize="30sp"
                            android:text="@string/videos"
                            android:layout_marginStart="10dp" />


                    </LinearLayout-->
                </LinearLayout>


            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</LinearLayout>